# wallet_standard

./: .release-plz.toml  Cargo.toml  devenv.nix  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/wallet_standard/: Cargo.toml  changelog.md  readme.md
crates/wallet_standard/src/: lib.rs
crates/wallet_standard/src/snapshots/: wallet_standard__tests__signature_implements_signature_output.snap  wallet_standard__tests__transaction_implements_solana_sign_transaction_output.snap
crates/wallet_standard_browser/: Cargo.toml  changelog.md  readme.md
