[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.3"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
homepage = "https://github.com/ifiokjr/wallet_standard"
license = "Unlicense"
repository = "https://github.com/ifiokjr/wallet_standard"
rust-version = "1.79.0"

[workspace.dependencies]
anyhow = "1"
assert2 = "0.3"
async-trait = "0.1"
bincode = "1"
derive_more = "1"
futures = "0.3"
insta = "1"
js-sys = "0.3"
log = "0.4"
serde = "1"
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"
solana-sdk = "^2.1"
test-log = "0.2"
thiserror = "2"
tokio = "1"
typed-builder = "0.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

# publishable crates
wallet_standard = { path = "./crates/wallet_standard", version = "0.4.2" }
wallet_standard_browser = { path = "./crates/wallet_standard_browser", version = "0.4.1" }

[workspace.metadata.bin]
cargo-insta = { version = "1.41.1" }
cargo-llvm-cov = { version = "0.6.14" }
cargo-nextest = { version = "0.9.85" }
cargo-semver-checks = { version = "0.38.0" }
release-plz = { version = "0.3.111", bins = ["release-plz"] }
wasm-bindgen-cli = { version = "0.2.99", bins = ["wasm-bindgen", "wasm-bindgen-test-runner"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release.package.example_program]
overflow-checks = true
codegen-units = 1
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
lto = "fat"
overflow-checks = true

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
